explain command for cluster write and cluster aggregate can be invoked on non-shardsvr mongod

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • 5
    • 3
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-63495 linked cluster find, aggregate, getMore, insert, update and delete into mongod. It relies on calling Impl::checkCanRunHere() to prevent these commands from being run on a non-shardsvr mongod. However, currently this method is not called in the explain() method for ClusterWriteCmd and ClusterPipelineCommandBase so right now the explain command for cluster write and cluster aggregate can be invoked on non-shardsvr mongod. As shown in BF-26337, running it causes the mongod to hit a segmentation fault.

            Assignee:
            Wenqin Ye
            Reporter:
            Cheahuychou Mao
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: