SERVER-69714 Fix explain command for cluster write and cluster aggregate can be invoked on non-shardsvr mongod