src/mongo/s/commands/cluster_pipeline_cmd.h
@@ -155,6 +155,7 @@ public:
         void explain(OperationContext* opCtx,
                      ExplainOptions::Verbosity verbosity,
                      rpc::ReplyBuilderInterface* result) override {
+            Impl::checkCanRunHere(opCtx);
             auto bodyBuilder = result->getBodyBuilder();
             _runAggCommand(opCtx, _dbName, _request.body, &bodyBuilder);
         }
